--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
     "clsx": "^2.1.1",
+    "encoding": "^0.1.13",
     "face-api.js": "^0.22.2",
     "next": "15.4.6",
     "react": "19.1.0",
